--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
+    "crypto-js": "^3.1.9-1",
+    "js-cookie": "^2.2.0",
+    "materialize-css": "^1.0.0-rc.1",
     "vue": "^2.5.16"
   },
   "devDependencies": {
